--- a/.htaccess
+++ b/.htaccess
@@ -1,14 +1,14 @@
 <IfModule dir_module>
-    DirectoryIndex index.php
+    DirectoryIndex index.html
 </IfModule>
 RewriteEngine on
 RewriteCond %{REQUEST_FILENAME} !-d
-RewriteCond %{REQUEST_FILENAME}\.php -f
-RewriteRule ^(.*)$ $1.php
+RewriteCond %{REQUEST_FILENAME}\.html -f
+RewriteRule ^(.*)$ $1.html
 
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-d
-RewriteRule ^(.*)$ index.php
+RewriteRule ^(.*)$ index.html
 
 php_flag display_startup_errors on
 php_flag display_errors on
